--- a/index.html
+++ b/index.html
@@ -131,5 +131,5 @@
             const tentativas = parseInt(tentativasInput.value);
             const acertos = parseInt(acertosInput.value);
 
-            if (acertos > tentativas) {
+            if (acertos > tentativas) 
                
