--- a/index.html
+++ b/index.html
@@ -129,4 +129,4 @@
 
         calcularButton.addEventListener('click', (e) => {
             e.preventDefault();
-            const tentativas = parseInt(tentativasInput.value
+            const tentativas = parseInt(tentativasInput.value    }}}}
