--- a/index.html
+++ b/index.html
@@ -5,12 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de Acertos</title>
     <style>
-        :root {
-            --primary-color: #4CAF50;
-            --secondary-color: #333;
-            --background-color: #fff;
-            --text-color: #333;
-        }
         body {
             font-family: Arial, sans-serif;
             text-align: center;
@@ -19,25 +13,25 @@
         .container {
             max-width: 400px;
             margin: 40px auto;
-            padding: 30px;
-            border: 1px solid var(--secondary-color);
+            padding: 30px; /* aumentei o padding para 30px */
+            border: 1px solid #ddd;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         .label {
             display: block;
-            margin-bottom: 20px;
+            margin-bottom: 20px; /* aumentei o espaçamento entre as labels */
             text-align: left;
-            margin-left: 40px;
+            margin-left: 40px; /* aumentei o espaçamento à esquerda */
         }
         .input {
             padding: 10px;
-            border: 1px solid var(--secondary-color);
+            border: 1px solid #ccc;
             border-radius: 5px;
             width: 100%;
         }
         .button {
-            background-color: var(--primary-color);
+            background-color: #4CAF50;
             color: #fff;
             padding: 10px 20px;
             border: none;
@@ -45,7 +39,7 @@
             cursor: pointer;
         }
         .button:hover {
-            background-color: var(--primary-color);
+            background-color: #3e8e41;
         }
         .result {
             font-size: 24px;
@@ -53,15 +47,15 @@
             margin-top: 20px;
         }
         .dark-mode {
-            background-color: var(--secondary-color);
+            background-color: #333;
             color: #fff;
         }
         .dark-mode .container {
-            border-color: var(--secondary-color);
+            border-color: #666;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
         }
         .dark-mode .button {
-            background-color: var(--secondary-color);
+            background-color: #666;
             color: #fff;
         }
         .dark-mode .label {
@@ -88,4 +82,45 @@
         <button class="mode-button" id="mode-button">Modo Claro</button>
     </div>
     <div class="container">
-        <form
+        <form>
+            <label class="label" for="tentativas">Tentativas:</label>
+            <input class="input" type="number" id="tentativas" required>
+            <br><br> <!-- adicionei um espaço entre as labels -->
+            <label class="label" for="acertos">Acertos:</label>
+            <input class="input" type="number" id="acertos" required>
+            <div class="button-container">
+                <button class="button" id="calcular">Calcular</button>
+            </div>
+        </form>
+        <div class="result" id="result">
+            <p id="acertos-resultado"></p>
+            <p id="erros-resultado"></p>
+        </div>
+    </div>
+
+    <script>
+        const modeButton = document.getElementById('mode-button');
+        const body = document.body;
+
+        modeButton.addEventListener('click', () => {
+            body.classList.toggle('dark-mode');
+            modeButton.textContent = body.classList.contains('dark-mode') ? 'Modo Claro' : 'Modo Escuro';
+        });
+
+        const calcularButton = document.getElementById('calcular');
+        const acertosResultadoElement = document.getElementById('acertos-resultado');
+        const errosResultadoElement = document.getElementById('erros-resultado');
+
+        calcularButton.addEventListener('click', (e) => {
+            e.preventDefault();
+            const tentativas = parseInt(document.getElementById('tentativas').value);
+            const acertos = parseInt(document.getElementById('acertos').value);
+            const erros = tentativas - acertos;
+            const acertosPorcentagem = (acertos / tentativas) * 100;
+            const errosPorcentagem = (erros / tentativas) * 100;
+            acertosResultadoElement.textContent = `Acertos: ${acertosPorcentagem.toFixed(2)}%`;
+            errosResultadoElement.textContent = `Erros: ${errosPorcentagem.toFixed(2)}%`;
+        });
+    </script>
+</body>
+</html
