--- a/index.html
+++ b/index.html
@@ -5,75 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de Acertos</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            transition: background-color 0.5s;
-        }
-        .container {
-            max-width: 400px;
-            margin: 40px auto;
-            padding: 30px; /* aumentei o padding para 30px */
-            border: 1px solid #ddd;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .label {
-            display: block;
-            margin-bottom: 20px; /* aumentei o espaçamento entre as labels */
-            text-align: left;
-            margin-left: 40px; /* aumentei o espaçamento à esquerda */
-        }
-        .input {
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            width: 100%;
-        }
-        .button {
-            background-color: #4CAF50;
-            color: #fff;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .button:hover {
-            background-color: #3e8e41;
-        }
-        .result {
-            font-size: 24px;
-            font-weight: bold;
-            margin-top: 20px;
-        }
-        .dark-mode {
-            background-color: #333;
-            color: #fff;
-        }
-        .dark-mode .container {
-            border-color: #666;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-        }
-        .dark-mode .button {
-            background-color: #666;
-            color: #fff;
-        }
-        .dark-mode .label {
-            color: #fff;
-        }
-        .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 20px;
-        }
-        .mode-button {
-            margin-left: 20px;
-        }
-        .button-container {
-            margin-top: 20px;
-            text-align: center;
-        }
+        /* ... */
     </style>
 </head>
 <body>
@@ -83,9 +15,12 @@
     </div>
     <div class="container">
         <form>
+            <label class="label" for="nome">Nome:</label>
+            <input class="input" type="text" id="nome" required>
+            <br><br>
             <label class="label" for="tentativas">Tentativas:</label>
             <input class="input" type="number" id="tentativas" required>
-            <br><br> <!-- adicionei um espaço entre as labels -->
+            <br><br>
             <label class="label" for="acertos">Acertos:</label>
             <input class="input" type="number" id="acertos" required>
             <div class="button-container">
@@ -93,8 +28,7 @@
             </div>
         </form>
         <div class="result" id="result">
-            <p id="acertos-resultado"></p>
-            <p id="erros-resultado"></p>
+            <p id="historico"></p>
         </div>
     </div>
 
@@ -108,19 +42,25 @@
         });
 
         const calcularButton = document.getElementById('calcular');
-        const acertosResultadoElement = document.getElementById('acertos-resultado');
-        const errosResultadoElement = document.getElementById('erros-resultado');
+        const nomeInput = document.getElementById('nome');
+        const tentativasInput = document.getElementById('tentativas');
+        const acertosInput = document.getElementById('acertos');
+        const historicoElement = document.getElementById('historico');
 
         calcularButton.addEventListener('click', (e) => {
             e.preventDefault();
-            const tentativas = parseInt(document.getElementById('tentativas').value);
-            const acertos = parseInt(document.getElementById('acertos').value);
+            const nome = nomeInput.value;
+            const tentativas = parseInt(tentativasInput.value);
+            const acertos = parseInt(acertosInput.value);
             const erros = tentativas - acertos;
             const acertosPorcentagem = (acertos / tentativas) * 100;
             const errosPorcentagem = (erros / tentativas) * 100;
-            acertosResultadoElement.textContent = `Acertos: ${acertosPorcentagem.toFixed(2)}%`;
-            errosResultadoElement.textContent = `Erros: ${errosPorcentagem.toFixed(2)}%`;
+
+            const resultado = `
+                <p>${nome}: Acertos: ${acertosPorcentagem.toFixed(2)}%, Erros: ${errosPorcentagem.toFixed(2)}%</p>
+            `;
+            historicoElement.innerHTML += resultado;
         });
     </script>
 </body>
-</html
+</html>
