--- a/index.html
+++ b/index.html
@@ -121,10 +121,12 @@
         const errosResultadoElement = document.getElementById('erros-resultado');
         const historicoElement = document.getElementById('historico-texto');
 
+        let historico = [];
+
         calcularButton.addEventListener('click', (e) => {
             e.preventDefault();
             const nome = nomeInput.value;
             const tentativas = parseInt(tentativasInput.value);
             const acertos = parseInt(acertosInput.value);
             const erros = tentativas - acertos;
-            const acertosPorcentagem = (ac
+            const acertos
