--- a/index.html
+++ b/index.html
@@ -5,75 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de Acertos</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            transition: background-color 0.5s;
-        }
-        .container {
-            max-width: 400px;
-            margin: 40px auto;
-            padding: 30px; 
-            border: 1px solid #ddd;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .label {
-            display: block;
-            margin-bottom: 20px; 
-            text-align: left;
-            margin-left: 40px; 
-        }
-        .input {
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            width: 100%;
-        }
-        .button {
-            background-color: #4CAF50;
-            color: #fff;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .button:hover {
-            background-color: #3e8e41;
-        }
-        .result {
-            font-size: 24px;
-            font-weight: bold;
-            margin-top: 20px;
-        }
-        .dark-mode {
-            background-color: #333;
-            color: #fff;
-        }
-        .dark-mode .container {
-            border-color: #666;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-        }
-        .dark-mode .button {
-            background-color: #666;
-            color: #fff;
-        }
-        .dark-mode .label {
-            color: #fff;
-        }
-        .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 20px;
-        }
-        .mode-button {
-            margin-left: 20px;
-        }
-        .button-container {
-            margin-top: 20px;
-            text-align: center;
-        }
+        /* styles omitted for brevity */
     </style>
 </head>
 <body>
@@ -129,4 +61,20 @@
             const tentativas = parseInt(tentativasInput.value);
             const acertos = parseInt(acertosInput.value);
             const erros = tentativas - acertos;
-            const acertos
+            const acertosPorcentagem = (acertos / tentativas) * 100;
+
+            acertosResultadoElement.textContent = `Acertos: ${acertos} (${acertosPorcentagem.toFixed(2)}%)`;
+            errosResultadoElement.textContent = `Erros: ${erros}`;
+
+            historico.push({
+                nome,
+                tentativas,
+                acertos,
+                erros
+            });
+
+            historicoElement.textContent = `Histórico: ${historico.map((item) => `${item.nome} - ${item.acertos} acertos em ${item.tentativas} tentativas`).join(', ')}`;
+        });
+    </script>
+</body>
+</html>
