--- a/index.html
+++ b/index.html
@@ -128,4 +128,5 @@
             const nome = nomeInput.value;
             const tentativas = parseInt(tentativasInput.value);
             const acertos = parseInt(acertosInput.value);
-            const erros = tent
+            const erros = tentativas - acertos;
+            const acertosPorcent
