--- a/index.html
+++ b/index.html
@@ -6,6 +6,37 @@
     <title>Calculadora de Acertos</title>
     <style>
         /* styles omitted for brevity */
+        .dark-mode {
+          background-color: #333;
+          color: #fff;
+        }
+
+        .dark-mode .header {
+          background-color: #444;
+        }
+
+        .dark-mode .container {
+          background-color: #333;
+        }
+
+        .dark-mode .label {
+          color: #fff;
+        }
+
+        .dark-mode .input {
+          background-color: #444;
+          color: #fff;
+        }
+
+        .dark-mode .button {
+          background-color: #555;
+          color: #fff;
+        }
+
+        .dark-mode .result {
+          background-color: #333;
+          color: #fff;
+        }
     </style>
 </head>
 <body>
