--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <p id="erros-resultado"></p>
         </div>
         <div class="result" id="historico">
-            <p id="historico-texto"></p>
+            <div id="historico-texto"></div>
         </div>
     </div>
 
@@ -105,7 +105,12 @@
                 erros
             });
 
-            historicoElement.textContent = `Histórico: ${historico.map((item) => `${item.nome} - ${item.acertos} acertos em ${item.tentativas} tentativas`).join(', ')}`;
+            historicoElement.innerHTML = '';
+            historico.forEach((item) => {
+                const paragraph = document.createElement('p');
+                paragraph.textContent = `${item.nome} - ${item.acertos} acertos em ${item.tentativas} tentativas`;
+                historicoElement.appendChild(paragraph);
+            });
         });
     </script>
 </body>
