--- a/index.html
+++ b/index.html
@@ -5,37 +5,115 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de Acertos</title>
     <style>
-        /* styles omitted for brevity */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        .header {
+            background-color: #333;
+            color: #fff;
+            padding: 1rem;
+            text-align: center;
+        }
+
+        .header h1 {
+            margin: 0;
+        }
+
+        .mode-button {
+            background-color: #444;
+            color: #fff;
+            border: none;
+            padding: 0.5rem 1rem;
+            font-size: 1rem;
+            cursor: pointer;
+        }
+
+        .mode-button:hover {
+            background-color: #555;
+        }
+
+        .container {
+            max-width: 400px;
+            margin: 2rem auto;
+            padding: 2rem;
+            background-color: #f9f9f9;
+            border: 1px solid #ddd;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .label {
+            display: block;
+            margin-bottom: 0.5rem;
+        }
+
+        .input {
+            padding: 0.5rem;
+            font-size: 1rem;
+            border: 1px solid #ccc;
+        }
+
+        .button {
+            background-color: #333;
+            color: #fff;
+            border: none;
+            padding: 0.5rem 1rem;
+            font-size: 1rem;
+            cursor: pointer;
+        }
+
+        .button:hover {
+            background-color: #444;
+        }
+
+        .result {
+            margin-top: 2rem;
+        }
+
+        .result p {
+            margin-bottom: 0.5rem;
+        }
+
+        .historico {
+            margin-top: 2rem;
+        }
+
+        .historico p {
+            margin-bottom: 0.5rem;
+        }
+
         .dark-mode {
-          background-color: #333;
-          color: #fff;
+            background-color: #333;
+            color: #fff;
         }
 
         .dark-mode .header {
-          background-color: #444;
+            background-color: #444;
         }
 
         .dark-mode .container {
-          background-color: #333;
+            background-color: #333;
         }
 
         .dark-mode .label {
-          color: #fff;
+            color: #fff;
         }
 
         .dark-mode .input {
-          background-color: #444;
-          color: #fff;
+            background-color: #444;
+            color: #fff;
         }
 
         .dark-mode .button {
-          background-color: #555;
-          color: #fff;
+            background-color: #555;
+            color: #fff;
         }
 
         .dark-mode .result {
-          background-color: #333;
-          color: #fff;
+            background-color: #333;
+            color: #fff;
         }
     </style>
 </head>
@@ -62,7 +140,7 @@
             <p id="acertos-resultado"></p>
             <p id="erros-resultado"></p>
         </div>
-        <div class="result" id="historico">
+        <div class="historico" id="historico">
             <div id="historico-texto"></div>
         </div>
     </div>
