--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         }
 
         .mode-button {
+            position: absolute;
+            top: 10px;
+            right: 10px;
             background-color: #444;
             color: #fff;
             border: none;
@@ -120,8 +123,8 @@
 <body>
     <div class="header">
         <h1>Bots Robocep</h1>
-        <button class="mode-button" id="mode-button">Modo Claro</button>
     </div>
+    <button class="mode-button" id="mode-button">Modo Claro</button>
     <div class="container">
         <form>
             <label class="label" for="nome">Nome:</label>
