--- a/index.html
+++ b/index.html
@@ -38,6 +38,26 @@
             background-color: #555;
         }
 
+        .instagram-button {
+            position: absolute;
+            top: 10px;
+            right: 60px;
+            background-color: #333;
+            color: #fff;
+            border: none;
+            padding: 0.5rem 1rem;
+            font-size: 1rem;
+            cursor: pointer;
+        }
+
+        .instagram-button:hover {
+            background-color: #444;
+        }
+
+        .instagram-button i {
+            margin-right: 0.5rem;
+        }
+
         .container {
             max-width: 400px;
             margin: 2rem auto;
