--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         .mode-button {
             position: absolute;
             top: 10px;
-            right: 10px;
+            right: 60px;
             background-color: #444;
             color: #fff;
             border: none;
@@ -41,7 +41,7 @@
         .instagram-button {
             position: absolute;
             top: 10px;
-            right: 60px;
+            right: 10px;
             background-color: #333;
             color: #fff;
             border: none;
@@ -145,6 +145,9 @@
         <h1>Bots Robocep</h1>
     </div>
     <button class="mode-button" id="mode-button">Modo Claro</button>
+    <button class="instagram-button" id="instagram-button">
+      <i class="fa-brands fa-instagram"></i> Instagram
+    </button>
     <div class="container">
         <form>
             <label class="label" for="nome">Nome:</label>
