--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         .mode-button {
             position: absolute;
             top: 10px;
-            right: 60px;
+            right: 150px;
             background-color: #444;
             color: #fff;
             border: none;
@@ -145,7 +145,7 @@
         <h1>Bots Robocep</h1>
     </div>
     <button class="mode-button" id="mode-button">Modo Claro</button>
-    <button class="instagram-button" id="instagram-button">
+    <button class="instagram-button" id="instagram-button" onclick="window.open('https://www.instagram.com/bots_robocep/', '_blank')">
       <i class="fa-brands fa-instagram"></i> Instagram
     </button>
     <div class="container">
