--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             position: absolute;
             top: 10px;
             right: 10px;
-            background-color: #444;
+            background-color: #333;
             color: #fff;
             border: none;
             padding: 0.5rem 1rem;
@@ -163,7 +163,7 @@
             </div>
         </form>
         <div class="result" id="result">
-            <p id="acertos-resultado"></p>
+            <p id="acertos-resultado"><//p>
             <p id="erros-resultado"></p>
         </div>
         <div class="historico" id="historico">
