--- a/index.html
+++ b/index.html
@@ -191,6 +191,9 @@
         let historico = [];
 
         calcularButton.addEventListener('click', (e) => {
+              if (acertos > tentativas) {
+            alert("O número de acertos não pode ser maior que o número de tentativas.");
+            return;
             e.preventDefault();
             const nome = nomeInput.value;
             const tentativas = parseInt(tentativasInput.value);
