--- a/index.html
+++ b/index.html
@@ -37,6 +37,21 @@
         .mode-button:hover {
             background-color: #555;
         }
+  .Robocep-button {
+            position: absolute;
+            top: 80px;
+            right: 250px;
+            background-color: #444;
+            color: #fff;
+            border: none;
+            padding: 0.5rem 1rem;
+            font-size: 1rem;
+            cursor: pointer;
+        }
+
+        .robocep-button:hover {
+            background-color: #555;
+        }
 
         .instagram-button {
             position: absolute;
@@ -146,6 +161,7 @@
     </div>
     <button class="mode-button" id="mode-button">Modo Claro</button>
     <button class="instagram-button" id="instagram-button" onclick="window.open('https://www.instagram.com/bots_robocep/', '_blank')">
+    <button class="Robocep-button" id="Robocep-button" onclick="window.open('https://robocep.pythonanywhere.com/', '_blank')">
       <i class="fa-brands fa-instagram"></i> Instagram
     </button>
     <div class="container">
