--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   .Robocep-button {
             position: absolute;
             top: 80px;
-            right: 250px;
+            right: 350px;
             background-color: #444;
             color: #fff;
             border: none;
@@ -161,9 +161,9 @@
     </div>
     <button class="mode-button" id="mode-button">Modo Claro</button>
     <button class="instagram-button" id="instagram-button" onclick="window.open('https://www.instagram.com/bots_robocep/', '_blank')">
-    <button class="Robocep-button" id="Robocep-button" onclick="window.open('https://robocep.pythonanywhere.com/', '_blank')">
       <i class="fa-brands fa-instagram"></i> Instagram
     </button>
+    <button class="Robocep-button" id="Robocep-button" onclick="window.open('https://robocep.pythonanywhere.com/', '_blank')"></button>
     <div class="container">
         <form>
             <label class="label" for="nome">Nome:</label>
