--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
             cursor: pointer;
         }
 
-        .robocep-button:hover {
+        .Robocep-button:hover {
             background-color: #555;
+        }
+          .Robocep-button i {
+            margin-right: 0.5rem;
         }
 
         .instagram-button {
