--- a/index.html
+++ b/index.html
@@ -37,11 +37,10 @@
         .mode-button:hover {
             background-color: #555;
         }
-
-        .Robocep-button {
+  .Robocep-button {
             position: absolute;
             top: 80px;
-            right: 350px;
+            right: 300px;
             background-color: #444;
             color: #fff;
             border: none;
@@ -53,8 +52,7 @@
         .Robocep-button:hover {
             background-color: #555;
         }
-
-        .Robocep-button i {
+          .Robocep-button i {
             margin-right: 0.5rem;
         }
 
@@ -76,38 +74,6 @@
 
         .instagram-button i {
             margin-right: 0.5rem;
-        }
-
-        .upload-button {
-            position: absolute;
-            top: 80px;
-            left: 10px;
-            background-color: #444;
-            color: #fff;
-            border: none;
-            padding: 0.5rem 1rem;
-            font-size: 1rem;
-            cursor: pointer;
-        }
-
-        .upload-button:hover {
-            background-color: #555;
-        }
-
-        .download-button {
-            position: absolute;
-            top: 80px;
-            left: 120px;
-            background-color: #444;
-            color: #fff;
-            border: none;
-            padding: 0.5rem 1rem;
-            font-size: 1rem;
-            cursor: pointer;
-        }
-
-        .download-button:hover {
-            background-color: #555;
         }
 
         .container {
@@ -203,41 +169,43 @@
     <button class="Robocep-button" id="Robocep-button" onclick="window.open('https://robocep.pythonanywhere.com/', '_blank')">
       <i class="fa-solid fa-robot"></i> Robocep
     </button>
-    <button class="upload-button" id="upload-button">Upload de Arquivo</button>
-    <button class="download-button" id="download-button">Download de Arquivo</button>
     <div class="container">
-        <!-- ... -->
+        <form>
+            <label class="label" for="nome">Nome:</label>
+            <input class="input" type="text" id="nome" required>
+            <br><br>
+            <label class="label" for="tentativas">Tentativas:</label>
+            <input class="input" type="number" id="tentativas" required>
+            <br><br>
+            <label class="label" for="acertos">Acertos:</label>
+            <input class="input" type="number" id="acertos" required>
+            <div class="button-container">
+                <button class="button" id="calcular">Calcular</button>
+            </div>
+        </form>
+        <div class="result" id="result">
+            <p id="acertos-resultado"><//p>
+            <p id="erros-resultado"></p>
+        </div>
+        <div class="historico" id="historico">
+            <div id="historico-texto"></div>
+        </div>
     </div>
 
     <script>
-        // ...
+        const modeButton = document.getElementById('mode-button');
+        const body = document.body;
 
-        const uploadButton = document.getElementById('upload-button');
-        const downloadButton = document.getElementById('download-button');
-
-        uploadButton.addEventListener('click', () => {
-            const arquivoInput = document.createElement('input');
-            arquivoInput.type = 'file';
-            arquivoInput.accept = '.txt, .csv';
-            arquivoInput.addEventListener('change', (e) => {
-                const arquivo = arquivoInput.files[0];
-                // Lidar com o arquivo selecionado aqui
-                console.log(arquivo);
-            });
-            arquivoInput.click();
-        });
-
-        downloadButton.addEventListener('click', () => {
-            const historico = [];
-            // ...
-            const arquivo = new Blob([JSON.stringify(historico)], { type: 'application/json' });
-            const url = URL.createObjectURL(arquivo);
-            const a = document.createElement('a');
-            a.href = url;
-            a.download = 'historico.json';
-            a.click();
-        });
-    
+        modeButton.addEventListener('click', () => {
+            body.classList.toggle('dark-mode');
+            modeButton.textContent = body.classList.contains('dark-mode') ? 'Modo Claro' : 'Modo Escuro';
+});
+        const arquivoInput = document.getElementById('arquivo');
+arquivoInput.addEventListener('change', (e) => {
+    const arquivo = arquivoInput.files[0];
+    // Lidar com o arquivo selecionado aqui
+    console.log(arquivo);
+});
         const calcularButton = document.getElementById('calcular');
         const nomeInput = document.getElementById('nome');
         const tentativasInput = document.getElementById('tentativas');
@@ -260,7 +228,7 @@
             const erros = tentativas - acertos;
             const acertosPorcentagem = (acertos / tentativas) * 100;
             const errosPorcentagem = (erros / tentativas) * 100;
-                                    
+
             acertosResultadoElement.textContent = `Acertos: ${acertos} (${acertosPorcentagem.toFixed(2)}%)`;
             errosResultadoElement.textContent = `Erros: ${erros} (${errosPorcentagem.toFixed(2)}%)`;
 
