--- a/index.html
+++ b/index.html
@@ -5,157 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de Acertos</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        .header {
-            background-color: #333;
-            color: #fff;
-            padding: 1rem;
-            text-align: center;
-        }
-
-        .header h1 {
-            margin: 0;
-        }
-
-        .mode-button {
-            position: absolute;
-            top: 80px;
-            right: 150px;
-            background-color: #444;
-            color: #fff;
-            border: none;
-            padding: 0.5rem 1rem;
-            font-size: 1rem;
-            cursor: pointer;
-        }
-
-        .mode-button:hover {
-            background-color: #555;
-        }
-  .Robocep-button {
-            position: absolute;
-            top: 80px;
-            right: 300px;
-            background-color: #444;
-            color: #fff;
-            border: none;
-            padding: 0.5rem 1rem;
-            font-size: 1rem;
-            cursor: pointer;
-        }
-
-        .Robocep-button:hover {
-            background-color: #555;
-        }
-          .Robocep-button i {
-            margin-right: 0.5rem;
-        }
-
-        .instagram-button {
-            position: absolute;
-            top: 80px;
-            right: 10px;
-            background-color: #444;
-            color: #fff;
-            border: none;
-            padding: 0.5rem 1rem;
-            font-size: 1rem;
-            cursor: pointer;
-        }
-
-        .instagram-button:hover {
-            background-color: #444;
-        }
-
-        .instagram-button i {
-            margin-right: 0.5rem;
-        }
-
-        .container {
-            max-width: 400px;
-            margin: 2rem auto;
-            padding: 2rem;
-            background-color: #f9f9f9;
-            border: 1px solid #ddd;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .label {
-            display: block;
-            margin-bottom: 0.5rem;
-        }
-
-        .input {
-            padding: 0.5rem;
-            font-size: 1rem;
-            border: 1px solid #ccc;
-        }
-
-        .button {
-            background-color: #333;
-            color: #fff;
-            border: none;
-            padding: 0.5rem 1rem;
-            font-size: 1rem;
-            cursor: pointer;
-        }
-
-        .button:hover {
-            background-color: #444;
-        }
-
-        .result {
-            margin-top: 2rem;
-        }
-
-        .result p {
-            margin-bottom: 0.5rem;
-        }
-
-        .historico {
-            margin-top: 2rem;
-        }
-
-        .historico p {
-            margin-bottom: 0.5rem;
-        }
-
-        .dark-mode {
-            background-color: #333;
-            color: #fff;
-        }
-
-        .dark-mode .header {
-            background-color: #444;
-        }
-
-        .dark-mode .container {
-            background-color: #333;
-        }
-
-        .dark-mode .label {
-            color: #fff;
-        }
-
-        .dark-mode .input {
-            background-color: #444;
-            color: #fff;
-        }
-
-        .dark-mode .button {
-            background-color: #555;
-            color: #fff;
-        }
-
-        .dark-mode .result {
-            background-color: #333;
-            color: #fff;
-        }
+        /* ... */
     </style>
 </head>
 <body>
@@ -169,6 +19,8 @@
     <button class="Robocep-button" id="Robocep-button" onclick="window.open('https://robocep.pythonanywhere.com/', '_blank')">
       <i class="fa-solid fa-robot"></i> Robocep
     </button>
+    <button class="upload-button" id="upload-button">Upload de Arquivo</button>
+    <button class="download-button" id="download-button">Download de Arquivo</button>
     <div class="container">
         <form>
             <label class="label" for="nome">Nome:</label>
@@ -184,7 +36,7 @@
             </div>
         </form>
         <div class="result" id="result">
-            <p id="acertos-resultado"><//p>
+            <p id="acertos-resultado"></p>
             <p id="erros-resultado"></p>
         </div>
         <div class="historico" id="historico">
@@ -199,13 +51,34 @@
         modeButton.addEventListener('click', () => {
             body.classList.toggle('dark-mode');
             modeButton.textContent = body.classList.contains('dark-mode') ? 'Modo Claro' : 'Modo Escuro';
-});
-        const arquivoInput = document.getElementById('arquivo');
-arquivoInput.addEventListener('change', (e) => {
-    const arquivo = arquivoInput.files[0];
-    // Lidar com o arquivo selecionado aqui
-    console.log(arquivo);
-});
+        });
+
+        const uploadButton = document.getElementById('upload-button');
+        const downloadButton = document.getElementById('download-button');
+
+        uploadButton.addEventListener('click', () => {
+            const arquivoInput = document.createElement('input');
+            arquivoInput.type = 'file';
+            arquivoInput.accept = '.txt, .csv';
+            arquivoInput.addEventListener('change', (e) => {
+                const arquivo = arquivoInput.files[0];
+                // Lidar com o arquivo selecionado aqui
+                console.log(arquivo);
+            });
+            arquivoInput.click();
+        });
+
+        downloadButton.addEventListener('click', () => {
+            const historico = [];
+            // ...
+            const arquivo = new Blob([JSON.stringify(historico)], { type: 'application/json' });
+            const url = URL.createObjectURL(arquivo);
+            const a = document.createElement('a');
+            a.href = url;
+            a.download = 'historico.json';
+            a.click();
+        });
+
         const calcularButton = document.getElementById('calcular');
         const nomeInput = document.getElementById('nome');
         const tentativasInput = document.getElementById('tentativas');
@@ -221,16 +94,15 @@ arquivoInput.addEventListener('change', (e) => {
             const nome = nomeInput.value;
             const tentativas = parseInt(tentativasInput.value);
             const acertos = parseInt(acertosInput.value);
-             if (acertos > tentativas) {
-            alert("O número de acertos não pode ser maior que o número de tentativas.");
-            return;
-             }
+            if (acertos > tentativas) {
+                alert("O número de acertos não pode ser maior que o número de tentativas.");
+                return;
+            }
             const erros = tentativas - acertos;
             const acertosPorcentagem = (acertos / tentativas) * 100;
             const errosPorcentagem = (erros / tentativas) * 100;
 
             acertosResultadoElement.textContent = `Acertos: ${acertos} (${acertosPorcentagem.toFixed(2)}%)`;
-            errosResultadoElement.textContent = `Erros: ${erros} (${errosPorcentagem.toFixed(2)}%)`;
 
              historico.push({
                 nome,
