--- a/index.html
+++ b/index.html
@@ -22,26 +22,7 @@
     <button class="upload-button" id="upload-button">Upload de Arquivo</button>
     <button class="download-button" id="download-button">Download de Arquivo</button>
     <div class="container">
-        <form>
-            <label class="label" for="nome">Nome:</label>
-            <input class="input" type="text" id="nome" required>
-            <br><br>
-            <label class="label" for="tentativas">Tentativas:</label>
-            <input class="input" type="number" id="tentativas" required>
-            <br><br>
-            <label class="label" for="acertos">Acertos:</label>
-            <input class="input" type="number" id="acertos" required>
-            <div class="button-container">
-                <button class="button" id="calcular">Calcular</button>
-            </div>
-        </form>
-        <div class="result" id="result">
-            <p id="acertos-resultado"></p>
-            <p id="erros-resultado"></p>
-        </div>
-        <div class="historico" id="historico">
-            <div id="historico-texto"></div>
-        </div>
+        <!-- ... -->
     </div>
 
     <script>
@@ -62,21 +43,32 @@
             arquivoInput.accept = '.txt, .csv';
             arquivoInput.addEventListener('change', (e) => {
                 const arquivo = arquivoInput.files[0];
-                // Lidar com o arquivo selecionado aqui
-                console.log(arquivo);
+                const formData = new FormData();
+                formData.append('arquivo', arquivo);
+                fetch('<?php echo $_SERVER['PHP_SELF']; ?>', {
+                    method: 'POST',
+                    body: formData
+                })
+                .then(response => response.json())
+                .then(data => console.log(data))
+                .catch(error => console.error(error));
             });
             arquivoInput.click();
         });
 
         downloadButton.addEventListener('click', () => {
-            const historico = [];
-            // ...
-            const arquivo = new Blob([JSON.stringify(historico)], { type: 'application/json' });
-            const url = URL.createObjectURL(arquivo);
-            const a = document.createElement('a');
-            a.href = url;
-            a.download = 'historico.json';
-            a.click();
+            fetch('<?php echo $_SERVER['PHP_SELF']; ?>', {
+                method: 'GET'
+            })
+            .then(response => response.blob())
+            .then(blob => {
+                const url = URL.createObjectURL(blob);
+                const a = document.createElement('a');
+                a.href = url;
+                a.download = 'arquivo.txt'; // Nome do arquivo para download
+                a.click();
+            })
+            .catch(error => console.error(error));
         });
 
         const calcularButton = document.getElementById('calcular');
@@ -103,8 +95,9 @@
             const errosPorcentagem = (erros / tentativas) * 100;
 
             acertosResultadoElement.textContent = `Acertos: ${acertos} (${acertosPorcentagem.toFixed(2)}%)`;
+            errosResultadoElement.textContent = `Erros: ${erros} (${errosPorcentagem.toFixed(2)}%)`;
 
-             historico.push({
+            historico.push({
                 nome,
                 tentativas,
                 acertos,
@@ -121,5 +114,42 @@
             });
         });
     </script>
+
+    <?php
+// Verificar se o formulário de upload foi submetido
+if ($_SERVER['REQUEST_METHOD'] == 'POST') {
+    // Verificar se o arquivo foi enviado
+    if (isset($_FILES['arquivo'])) {
+        $arquivo = $_FILES['arquivo'];
+        // Verificar se o arquivo é válido
+        if ($arquivo['error'] == 0) {
+            // Salvar o arquivo no servidor
+            $nome_arquivo = $arquivo['name'];
+            $tipo_arquivo = $arquivo['type'];
+            $tamanho_arquivo = $arquivo['size'];
+            $tmp_arquivo = $arquivo['tmp_name'];
+            $destino_arquivo = 'uploads/' . $nome_arquivo;
+            move_uploaded_file($tmp_arquivo, $destino_arquivo);
+            // Retornar uma mensagem de sucesso
+            echo json_encode(['mensagem' => 'Arquivo uploaded com sucesso!']);
+        } else {
+            // Retornar uma mensagem de erro
+            echo json_encode(['mensagem' => 'Erro ao upload do arquivo!']);
+        }
+    }
+} elseif ($_SERVER['REQUEST_METHOD'] == 'GET') {
+    // Verificar se o arquivo existe no servidor
+    $arquivo = 'arquivo.txt';
+    if (file_exists($arquivo)) {
+        // Enviar o arquivo para download
+        header('Content-Type: application/octet-stream');
+        header('Content-Disposition: attachment; filename="' . $arquivo . '"');
+        readfile($arquivo);
+    } else {
+        // Retornar uma mensagem de erro
+        echo json_encode(['mensagem' => 'Arquivo não encontrado!']);
+    }
+}
+?>
 </body>
 </html>
