--- a/index.html
+++ b/index.html
@@ -166,7 +166,9 @@
     <button class="instagram-button" id="instagram-button" onclick="window.open('https://www.instagram.com/bots_robocep/', '_blank')">
       <i class="fa-brands fa-instagram"></i> Instagram
     </button>
-    <button class="Robocep-button" id="Robocep-button" onclick="window.open('https://robocep.pythonanywhere.com/', '_blank')"></button>
+    <button class="Robocep-button" id="Robocep-button" onclick="window.open('https://robocep.pythonanywhere.com/', '_blank')">
+  <i class="fa-solid fa-robot"></i> Robocep
+</button>
     <div class="container">
         <form>
             <label class="label" for="nome">Nome:</label>
